refactoring model again